...
    }
    
    private func setupView() {
        tableView.delegate = self
        tableView.dataSource = self
        tableView.estimatedRowHeight = 70
        tableView.register(UINib(nibName: "LoadingCell", bundle: .main), forCellReuseIdentifier: "LoadingCell")
        tableView.register(UINib(nibName: "GitRepoCell", bundle: .main), forCellReuseIdentifier: "GitRepoCell")
        
        refreshControl = UIRefreshControl()
        refreshControl?.addTarget(self, action:
                     #selector(handleRefresh(_:)),
                                 for: UIControl.Event.valueChanged)
        
...
