...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="95c-EV-pF2">
                                        <rect key="frame" x="83.333333333333343" y="0.0" width="20" height="20"/>
                                        <color key="tintColor" systemColor="systemYellowColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="StarImageView"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="20" id="KWN-pb-S7I"/>
                                            <constraint firstAttribute="height" constant="20" id="Vbq-da-F67"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NTc-KJ-DGK">
...
